Forced lombok requirement. Added rods. Added piles.
TODO:
Add base color variants of plastic types to machine frames.